--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">finlog</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">FinLog</string>
+    <string name="menu_description">Menu</string>
+    <string name="total_balance">Total Balance</string>
+    <string name="select_account">Select Account</string>
+    <string name="budget">Budget</string>
+    <string name="all_budgets">All Budgets</string>
+    <string name="entertainment">Entertainment</string>
+    <string name="food">Food</string>
+    <string name="fuel">Fuel</string>
+    <string name="categories">Categories</string>
+    <string name="statistics">Statistics</string>
+    <string name="last_records">Last Records</string>
 </resources>
