--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,9 +16,14 @@
     <string name="income">Income</string>
     <string name="transfer">Transfer</string>
     <string name="select_date">Select Date</string>
+    <string name="no_records_yet">No Records Yet</string>
+    <string name="add_your_first_record">Add your first record using the button below</string>
+    <string name="all_records">All Records</string>
+    <string name="delete_record">Delete Record</string>
+    <string name="delete_confirmation">Are you sure you want to delete this record?</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
     <string name="add_record">Add Record</string>
-    <string name="records">Records</string>
-
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
