card section done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,51 @@
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
     <string name="add_record">Add Record</string>
+
+    <string name="wallet_cards">Wallet Cards</string>
+    <string name="add_card">Add Card</string>
+    <string name="add_new_card">Add New Card</string>
+    <string name="card_number">Card Number</string>
+    <string name="card_holder_name">Cardholder Name</string>
+    <string name="cvv">CVV</string>
+    <string name="balance">Balance</string>
+    <string name="add">Add</string>
+    <string name="close">Close</string>
+
+    <string name="menu">Menu</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="support">Support</string>
+    <string name="create_backup">Create Backup</string>
+    <string name="restore_backup">Restore Backup</string>
+
+    <!-- Privacy Policy Content -->
+    <string name="privacy_policy_content">
+        We value your privacy. This Privacy Policy explains how FinLog collects, uses, and protects your personal information.\n\n
+        **1. Data Collection**\n
+        We collect information such as financial records, card details, and account balances to provide our services. This data is stored locally on your device.\n\n
+        **2. Data Usage**\n
+        Your data is used solely to manage your financial records within the app. We do not share your information with third parties.\n\n
+        **3. Data Security**\n
+        We use secure methods to store your data locally. However, you are responsible for securing your device.\n\n
+        **4. Changes to This Policy**\n
+        We may update this policy from time to time. Please review it periodically.\n\n
+        If you have any questions, please contact us at support@finlogapp.com.
+    </string>
+
+    <!-- Support Content -->
+    <string name="support_content">
+        We’re here to help you with FinLog!\n\n
+        **Contact Us**\n
+        Email: support@finlogapp.com\n\n
+        **Frequently Asked Questions**\n
+        - **How do I add a new record?**\n
+          Go to the Records tab and click the "+" button to add a new record.\n
+        - **How do I back up my data?**\n
+          Go to the Menu tab and select "Create Backup" to save your data.\n
+        - **How do I restore my data?**\n
+          Go to the Menu tab and select "Restore Backup" to recover your data.\n\n
+        For more help, please email us, and we’ll get back to you as soon as possible!
+    </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
